# codex

./: AGENTS.md  CHANGELOG.md  README.md
.github/: dotslash-config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: 5-vs-code-extension.yml
.github/workflows/: ci.yml  codespell.yml  rust-ci.yml  rust-release.yml
codex-cli/: package-lock.json  package.json
codex-cli/scripts/: README.md  build_npm_package.py  install_native_deps.py  install_native_deps.sh
codex-rs/: Cargo.toml  README.md  justfile
codex-rs/apply-patch/: Cargo.toml
codex-rs/apply-patch/src/: lib.rs  parser.rs
codex-rs/arg0/src/: lib.rs
codex-rs/chatgpt/: Cargo.toml
codex-rs/chatgpt/src/: apply_command.rs  chatgpt_client.rs  chatgpt_token.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: login.rs  main.rs  mcp_cmd.rs  pre_main_hardening.rs  proto.rs
codex-rs/common/: Cargo.toml
codex-rs/common/src/: lib.rs  model_presets.rs
codex-rs/core/: Cargo.toml  gpt_5_codex_prompt.md  prompt.md  swiftfox_prompt.md
codex-rs/core/src/: apply_patch.rs  auth.rs  bash.rs  chat_completions.rs  client.rs  client_common.rs  codex.rs  config.rs  config_edit.rs  config_profile.rs  config_types.rs  conversation_history.rs  conversation_manager.rs  custom_prompts.rs  default_client.rs  environment_context.rs  error.rs  event_mapping.rs  exec.rs  function_tool.rs  git_info.rs  internal_storage.rs  lib.rs  mcp_connection_manager.rs  message_history.rs  model_family.rs  model_provider_info.rs  openai_model_info.rs  openai_tools.rs  parse_command.rs  plan_tool.rs  review_format.rs  rollout.rs  safety.rs  seatbelt.rs  seatbelt_base_policy.sbpl  shell.rs  token_data.rs  tool_apply_patch.rs  turn_diff_tracker.rs  (+1 more)
codex-rs/core/tests/: chat_completions_payload.rs  chat_completions_sse.rs
codex-rs/core/tests/common/: Cargo.toml  lib.rs  responses.rs  test_codex.rs
codex-rs/docs/: codex_mcp_interface.md
codex-rs/exec/: Cargo.toml
codex-rs/exec/src/: cli.rs  event_processor.rs  event_processor_with_human_output.rs  event_processor_with_json_output.rs  exec_events.rs  experimental_event_processor_with_json_output.rs  lib.rs
codex-rs/exec/tests/: event_processor_with_json_output.rs
codex-rs/execpolicy/: Cargo.toml
codex-rs/execpolicy/src/: execv_checker.rs
codex-rs/file-search/: Cargo.toml
codex-rs/git-tooling/: Cargo.toml  README.md
codex-rs/git-tooling/src/: ghost_commits.rs  lib.rs  operations.rs  platform.rs
codex-rs/linux-sandbox/: Cargo.toml
codex-rs/login/: Cargo.toml
codex-rs/login/src/: server.rs
codex-rs/mcp-client/src/: main.rs  mcp_client.rs
codex-rs/mcp-server/: Cargo.toml
codex-rs/mcp-server/src/: codex_message_processor.rs  codex_tool_config.rs  codex_tool_runner.rs  lib.rs  message_processor.rs  outgoing_message.rs
codex-rs/mcp-server/tests/common/: Cargo.toml  mcp_process.rs
codex-rs/mcp-types/: Cargo.toml  generate_mcp_types.py
codex-rs/mcp-types/src/: lib.rs
codex-rs/ollama/: Cargo.toml
codex-rs/protocol/: Cargo.toml
codex-rs/protocol-ts/: Cargo.toml
codex-rs/protocol-ts/src/: lib.rs
codex-rs/protocol/src/: config_types.rs  custom_prompts.rs  lib.rs  mcp_protocol.rs  message_history.rs  models.rs  parse_command.rs  protocol.rs
codex-rs/scripts/: create_github_release
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: app.rs  app_backtrack.rs  app_event.rs  backtrack_helpers.rs  chatwidget.rs  cli.rs  clipboard_paste.rs  diff_render.rs  exec_command.rs  history_cell.rs  insert_history.rs  lib.rs  main.rs  markdown.rs  markdown_render.rs  markdown_stream.rs  tui.rs  (+11 more)
docs/: advanced.md  authentication.md  config.md  contributing.md  experimental.md  faq.md  getting-started.md  install.md  license.md  open-source-fund.md  platform-sandboxing.md  prompts.md  release_management.md  sandbox.md  zdr.md
scripts/: readme_toc.py
(+408 files in other folders)
