[package]
edition = "2024"
name = "codex-execpolicy"
version = { workspace = true }

[[bin]]
name = "codex-execpolicy"
path = "src/main.rs"

[lib]
name = "codex_execpolicy"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
allocative = "0.3.3"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
derive_more = { version = "2", features = ["display"] }
env_logger = "0.11.5"
log = "0.4"
multimap = "0.10.0"
path-absolutize = "3.1.1"
regex-lite = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["macros"] }
starlark = "0.13.0"

[dev-dependencies]
tempfile = "3.13.0"
